vertical align fix

--- a/pactum/css/styles.css
+++ b/pactum/css/styles.css
@@ -114,9 +114,3 @@ body{
     	justify-content: space-between;
 	}
 }
-
-@media screen and (min-height: 689px) {
-	.p-main{
-		margin-top:50%;
-	}
-}
